Changes for 3.2.8rc1

New features:

Bug fixes:

--------------------------------------------------------------------------------
Changes for 3.2.7

3.2.7rc2 was released as 3.2.7 without any changes

--------------------------------------------------------------------------------
Changes for 3.2.7rc2

New features:
A.F....... [ZBX-1357] updated Catalan, Chinese (China), English (United States), Japanese, Korean, Polish, Portuguese (Brazil), Ukrainian translations; thanks to Zabbix translators (zalex_ua)

Bug fixes:
..F....... [ZBX-12252] fixed history page to display values in chronological order (Sasha)

--------------------------------------------------------------------------------
Changes for 3.2.7rc1

Bug fixes:
........S. [ZBX-12349] fixed security vulnerability with execution of the remote commands on server; thanks to MATSUDA Daiki, Ron Waisberg for report (vso)
...G...... [ZBX-12231] fixed memory leak in agent if log[], logrt[] items use global regexps with multiple subexpressions (Andris)
...G...... [ZBX-12187] fixed memory leak when using UserParameter with suppressed characters passed in arguments (viktors)
........S. [ZBX-12328] fixed collecting value of VMware host memory balloon size (viktors)
..F....... [ZBX-12305] fixed incorrectly escaped IT Service parent name (Ivo)
..F....... [ZBX-11812] fixed sorting of host interfaces; fixed selection of the default host interface (miks)
..F....... [ZBX-11277] fixed update in mass update form when inventory mode is not set explicitly (gcalenko)
..F....... [ZBX-12182] fixed missed page number in problems export (miks)
..F....... [ZBX-11309] fixed unchecked checkboxes after deleting script, mediatype or proxy (miks)
..F....... [ZBX-10999] fixed user's access level to display popup content (miks)
..F....... [ZBX-9213] removed link from uneditable template and host names in all configuration sections (miks)
..F....... [ZBX-6533] improved LDAP authentication module status check for authentication form (gcalenko)