@@ -3,6 +3,7 @@ Changes for 3.2.8rc1
 New features:
 
 Bug fixes:
+..F....... [ZBX-12277] fixed trigger expression test form incorrectly replacing macros (Ivo)
 
 --------------------------------------------------------------------------------
 Changes for 3.2.7
@@ -454,6 +455,7 @@ Changes for 3.0.11rc1
 New features:
 
 Bug fixes:
+..F....... [ZBX-12277] fixed trigger expression test form incorrectly replacing macros (Ivo)
 
 --------------------------------------------------------------------------------
 Changes for 3.0.10
